# ToyRayTracing

./: CMakeLists.txt  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp
Resources/shaders/: shader.vert
include/: Material.h  Mesh.h  Model.h  Triangle.h  Utils.h
lib/: glfw3.lib
